unpackaged/main/default/objects/Contact/fields/Siftrock_Email__c.field-meta.xml
<CustomField>
    <fullName>Siftrock_Email__c</fullName>
    <formula>IF(
	ISBLANK(Owner.Email), "",
	LEFT(Owner.Email, (FIND("@", Owner.Email))) + "reply." + RIGHT(Owner.Email,LEN(Owner.Email)-FIND('@',Owner.Email))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Siftrock Email</label>
    <type>Text</type>
</CustomField>