unpackaged/main/default/objects/Contact/fields/Siftrock_Renewal_Email__c.field-meta.xml
<CustomField>
    <fullName>Siftrock_Renewal_Email__c</fullName>
    <formula>IF(
ISBLANK(Account.NF_Renewal_Rep__r.Email), "",
LEFT(Account.NF_Renewal_Rep__r.Email, (FIND("@", Account.NF_Renewal_Rep__r.Email))) + "reply." + RIGHT(Account.NF_Renewal_Rep__r.Email,LEN(Account.NF_Renewal_Rep__r.Email)-FIND('@',Account.NF_Renewal_Rep__r.Email))
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Siftrock Renewal Email</label>
    <type>Text</type>
</CustomField>