unpackaged/main/default/objects/Contact/fields/SLX_ContactID__c.field-meta.xml
<CustomField>
    <fullName>SLX_ContactID__c</fullName>
    <description>The contact ID from the legacy CRM system.</description>
    <externalId>true</externalId>
    <inlineHelpText>The contact ID from the legacy CRM system.</inlineHelpText>
    <label>SLX_ContactID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>