unpackaged/main/default/objects/Contact/fields/SMS_Requested__c.field-meta.xml
<CustomField>
    <fullName>SMS_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SMS Requested</label>
    <type>Checkbox</type>
</CustomField>