unpackaged/main/default/objects/Contact/fields/Spouse__c.field-meta.xml
<CustomField>
    <fullName>Spouse__c</fullName>
    <label>Spouse</label>
    <length>64</length>
    <type>Text</type>
</CustomField>