unpackaged/main/default/objects/Contact/fields/Spousebirthday__c.field-meta.xml
<CustomField>
    <fullName>Spousebirthday__c</fullName>
    <label>Spousebirthday</label>
    <type>Date</type>
</CustomField>