unpackaged/main/default/objects/Contact/fields/SSN__c.field-meta.xml
<CustomField>
    <fullName>SSN__c</fullName>
    <description>Social Security Number</description>
    <inlineHelpText>Enter SSN of customer</inlineHelpText>
    <label>SSN</label>
    <length>16</length>
    <type>Text</type>
</CustomField>