unpackaged/main/default/objects/Contact/fields/SSN_Hidden__c.field-meta.xml
<CustomField>
    <fullName>SSN_Hidden__c</fullName>
    <description>Social Security Number - Not Editable</description>
    <inlineHelpText>Social Security Number - Not Editable</inlineHelpText>
    <label>Social Security Number</label>
    <length>16</length>
    <type>Text</type>
</CustomField>