unpackaged/main/default/objects/Contact/fields/SSN_Masked__c.field-meta.xml
<CustomField>
    <fullName>SSN_Masked__c</fullName>
    <formula>IF(SSN_Hidden__c = '', '', 
IF($Profile.Name = 'FPC - Operations User',SSN_Hidden__c, 
IF($Profile.Name = 'System Administrator',SSN_Hidden__c,"***-**-" &amp; TRIM(RIGHT(SSN_Hidden__c,4)))))</formula>
    <label>SSN Masked</label>
    <type>Text</type>
</CustomField>