unpackaged/main/default/objects/Contact/fields/Terms_and_Conditions_Accepted__c.field-meta.xml
<CustomField>
    <fullName>Terms_and_Conditions_Accepted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox from the front end website</description>
    <label>Terms and Conditions Accepted</label>
    <type>Checkbox</type>
</CustomField>