unpackaged/main/default/objects/Contact/fields/Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Time_Zone__c</fullName>
    <formula>IF(ISPICKVAL(Account.Time_Zone__c,"01 Eastern"),"01 Eastern",IF(ISPICKVAL(Account.Time_Zone__c,"02 Indiana"),"02 Indiana",IF(ISPICKVAL(Account.Time_Zone__c,"03 Central"),"03 Central",IF(ISPICKVAL(Account.Time_Zone__c,"04 Mountain"),"04 Mountain",IF(ISPICKVAL(Account.Time_Zone__c,"05 Arizona"),"05 Arizona",IF(ISPICKVAL(Account.Time_Zone__c,"06 Pacific"),"06 Pacific",IF(ISPICKVAL(Account.Time_Zone__c,"07 Alaska"),"07 Alaska",IF(ISPICKVAL(Account.Time_Zone__c,"08 Hawaii"),"08 Hawaii","09 Unknown"))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Time Zone</label>
    <type>Text</type>
</CustomField>