unpackaged/main/default/objects/Contact/fields/Tradelines__c.field-meta.xml
<CustomField>
    <fullName>Tradelines__c</fullName>
    <label>Tradelines (#)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>