unpackaged/main/default/objects/Contact/fields/Underwriting_Contact_Id__c.field-meta.xml
<CustomField>
    <fullName>Underwriting_Contact_Id__c</fullName>
    <externalId>true</externalId>
    <label>Underwriting Contact Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>