unpackaged/main/default/objects/Contact/fields/VAP_I9_Threshold__c.field-meta.xml
<CustomField>
    <fullName>VAP_I9_Threshold__c</fullName>
    <label>VAP - I9 Threshold</label>
    <summarizedField>Vendor_Payment__c.Vendor_Payment_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Vendor_Payment__c.Payment_Direction__c</field>
        <operation>equals</operation>
        <value>Sales Rep</value>
    </summaryFilterItems>
    <summaryForeignKey>Vendor_Payment__c.Contact__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>