unpackaged/main/default/objects/Contact/fields/x_coord__c.field-meta.xml
<CustomField>
    <fullName>x_coord__c</fullName>
    <formula>RIGHT( SSN_Hidden__c,4)</formula>
    <label>x coord</label>
    <type>Text</type>
</CustomField>