unpackaged/main/default/objects/Contact/fields/y_coord__c.field-meta.xml
<CustomField>
    <fullName>y_coord__c</fullName>
    <formula>MID( SSN_Hidden__c ,3,1) &amp; IF(ISBLANK(SSN_Hidden__c)," ","-") &amp; MID( SSN_Hidden__c ,4,2) &amp;  IF(ISBLANK(SSN_Hidden__c)," ","-") &amp; MID( SSN_Hidden__c ,6,1)</formula>
    <label>y coord</label>
    <type>Text</type>
</CustomField>