unpackaged/main/default/objects/Contact/fields/Years_At_Home_Address__c.field-meta.xml
<CustomField>
    <fullName>Years_At_Home_Address__c</fullName>
    <description>This field will capture the number of years that the customer has lived at their home address.</description>
    <inlineHelpText>This field will capture the number of years that the customer has lived at their home address.</inlineHelpText>
    <label>Years At Home Address</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>