unpackaged/main/default/objects/Contact/recordTypes/Broker_Contact.recordType-meta.xml
<RecordType>
    <fullName>Broker_Contact</fullName>
    <active>true</active>
    <label>Broker Contact</label>
</RecordType>