unpackaged/main/default/objects/Contact/recordTypes/Broker_Customer_Contact.recordType-meta.xml
<RecordType>
    <fullName>Broker_Customer_Contact</fullName>
    <active>true</active>
    <label>Broker Customer Contact</label>
</RecordType>