unpackaged/main/default/objects/Contact/recordTypes/Cross_Corp_Contact.recordType-meta.xml
<RecordType>
    <fullName>Cross_Corp_Contact</fullName>
    <active>true</active>
    <label>Cross Corp Contact</label>
</RecordType>