unpackaged/main/default/objects/Contact/recordTypes/External_Collections_Customer_Contact.recordType-meta.xml
<RecordType>
    <fullName>External_Collections_Customer_Contact</fullName>
    <active>true</active>
    <description>Used for Contacts of Customers where loan originated outside of National Funding</description>
    <label>External Collections - Customer Contact</label>
</RecordType>