unpackaged/main/default/objects/Contact/recordTypes/Legal_Contact.recordType-meta.xml
<RecordType>
    <fullName>Legal_Contact</fullName>
    <active>true</active>
    <label>Legal Contact</label>
</RecordType>