unpackaged/main/default/objects/Contact/recordTypes/Lender_Contact.recordType-meta.xml
<RecordType>
    <fullName>Lender_Contact</fullName>
    <active>true</active>
    <label>Lender Contact</label>
</RecordType>