unpackaged/main/default/objects/Contact/recordTypes/Strategic_Partner_Contact.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Partner_Contact</fullName>
    <active>true</active>
    <label>Strategic Partner Contact</label>
</RecordType>