unpackaged/main/default/objects/Contact/recordTypes/Strategic_Partner_Customer_Contact.recordType-meta.xml
<RecordType>
    <fullName>Strategic_Partner_Customer_Contact</fullName>
    <active>true</active>
    <label>Strategic Partner Customer Contact</label>
</RecordType>