unpackaged/main/default/objects/Contact/validationRules/invalid_mobile_phone_number_format.validationRule-meta.xml
<ValidationRule>
    <fullName>invalid_mobile_phone_number_format</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
 $Profile.Name = 'FPC - WC - Renewal Sales',
 $Profile.Name = 'NF - Hybrid Sales',
 $Profile.Name = 'NF - WC Sales Manager',
 $Profile.Name = 'NF - Working Capital Users',
 $Profile.Name = 'NF Renewal Manager Profile'
),
NOT(REGEX(MobilePhone, "^(\\(\\d{3}\\)\\s?\\d{3}\\-\\d{4})?$")),
NOT(REGEX(MobilePhone, "^(\\d{3}\\-\\d{3}\\-\\d{4})?$")),
NOT(REGEX(MobilePhone,"^(\\d{10})?$")),
$Setup.ValidationRules__c.Bypass_Invalid_Phone_Format_Val_Rule__c =FALSE
)</errorConditionFormula>
    <errorMessage>Invalid Mobile Phone number format.</errorMessage>
</ValidationRule>