unpackaged/main/default/objects/Contact/validationRules/SMS_Opt_Out_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>SMS_Opt_Out_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
	ISCHANGED(SMS_Opt_Out__c),
	PRIORVALUE(SMS_Opt_Out__c)=TRUE,
	SMS_Opt_Out__c = FALSE,
 NOT($Setup.ValidationRules__c.Allow_Unchecking_SMS_Opt_Out__c)
)</errorConditionFormula>
    <errorMessage>You cannot manually uncheck the SMS Opt Out field</errorMessage>
</ValidationRule>