unpackaged/main/default/objects/Contact/validationRules/Validate_Home_State_Abbreviation.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Home_State_Abbreviation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
$UserRole.DeveloperName&lt;&gt;'ExecutiveCEO',
$UserRole.DeveloperName&lt;&gt;'PermissionsRole',
$UserRole.DeveloperName&lt;&gt;'Salesforce_Admin',
$Profile.Name&lt;&gt;'NF Partner - Brokers',
NOT(ISBLANK(OtherState)),
OR(
LEN(OtherState) &lt;&gt; 2,
NOT(
CONTAINS("AL:AK:AZ:AR:CA:CO:CT:DE:DC:FL:GA:HI:ID:" &amp;
"IL:IN:IA:KS:KY:LA:ME:MD:MA:MI:MN:MS:MO:MT:NE:NV:NH:" &amp;
"NJ:NM:NY:NC:ND:OH:OK:OR:PA:RI:SC:SD:TN:TX:UT:VT:VA:" &amp;
"WA:WV:WI:WY", OtherState)
)
)
)</errorConditionFormula>
    <errorMessage>A valid two-letter state abbreviation is required.</errorMessage>
</ValidationRule>