unpackaged/main/default/objects/Contact/validationRules/Zip_Code_Format_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Zip_Code_Format_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
$UserRole.DeveloperName&lt;&gt;'ExecutiveCEO',
$UserRole.DeveloperName&lt;&gt;'PermissionsRole',
$UserRole.DeveloperName&lt;&gt;'Salesforce_Admin',
NOT(ISBLANK(OtherPostalCode)),
NOT(REGEX(OtherPostalCode , "\\d{5}(-\\d{4})?")))</errorConditionFormula>
    <errorMessage>Zip code must be in 99999 or 99999-9999 format.</errorMessage>
</ValidationRule>